refactor code / remove slides in UX section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <ul id="myMenu">
         <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
         <li data-menuanchor="about-me"><a href="#about-me">about me</a></li>
-        <li data-menuanchor="ux"><a href="#ux">UX/UI</a></li>
+        <li data-menuanchor="user-interface"><a href="#user-interface">UX/UI</a></li>
         <li data-menuanchor="prototype"><a href="#prototype">prototype</a></li>
         <li data-menuanchor="photography"><a href="#photography">photography</a></li>
       </ul>
@@ -111,61 +111,21 @@
       </div>
     </div> <!-- .section .about-me  -->  
 
-    <div class="section ux">
-
-      <div class="horizontal ux-slide-01 flex justify-center is-row">
-        <div class="flex justify-center align-center is-row">
-           <section>
-            <h3 class="ux-prototype">prototyping + design</h3>
-            <p class="quote-text ux-prototype">“Even the darkest moments in our history can get got”
+    <div class="section user-interface flex">
+      <div class="p-background-icon">
+        <img src="img/prototype_icon.svg" alt=" prototype and design initial">
+      </div>
+      <div class="ux-slide-01 flex justify-center is-row">
+        <div class="wrapper-container flex justify-center align-center is-row">
+          <article>
+            <h3 class="fadetext-item">prototyping + design</h3>
+            <p class="quote-text fadetext-item">“Even the darkest moments in our history can get got”
             </p>
-            <p class="ux-prototype">Take a break for a moment One of the biggest <br>  challenges of design work is.</p>
-          </section>
-
+            <p class="fadetext-item">Take a break for a moment One of the biggest <br>  challenges of design work is.</p>
+            <button class="btn fadetext-item">view case study</button>
+          </article>
         </div>
       </div> <!-- .ux-slide-01 -->
-
-      <div class="horizontal ux-slide-02">
-        <div class="wrapper-container flex justify-center align-center ">
-          <div class="ux-image">
-            <img src="img/onBoard-large.png">
-          </div>
-          <article class="ux-slide02-text">
-            <h1>Case study / Birdy</h1>
-            <p>Birdy allows bird enthusist and scientist to locate and catelog native birds in New Zealand. This was a concept presented to MPI as part of there young leadership inovation programs.</p>
-          </article> 
-        </div>
-      </div> <!-- horizontal ux-slide-01 -->
-
-      <div class="horizontal ux-slide-03">
-        <div class="wrapper-container">
-          <div class="placeholder"></div>
-          <article class="ux-slide02-text">
-            <h1>USER INTERFACE</h1>
-            <p>While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX.</p>
-          </article> <!-- .ux-slide02-text -->
-          <div class="screens-container">
-            <div class='screen'>
-              <h5>Loading</h5>
-              <img src="img/loadingPage.png">
-            </div>
-            <div class='screen'>
-              <h5>On board</h5>
-              <img src="img/onBoard.png">
-            </div>
-            <div class='screen'>
-              <h5>Sign In</h5>
-              <img src="img/signIn.png">
-            </div>
-            <div class='screen'>
-              <h5>Sign Up</h5>
-              <img src="img/signUp.png">
-            </div>
-          </div>
-          <div class="placeholder"></div>
-        </div> 
-      </div> <!-- horizontal ux-slide-02 --> 
-
     </div> <!-- .section ux -->
 
     <div class="section prototype">
