refactor JS file and add fadein text functionality

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
         <li data-menuanchor="about-me"><a href="#about-me">about me</a></li>
         <li data-menuanchor="user-interface"><a href="#user-interface">UX/UI</a></li>
-        <li data-menuanchor="prototype"><a href="#prototype">prototype</a></li>
+        <li data-menuanchor="interaction"><a href="#interaction">interaction</a></li>
         <li data-menuanchor="photography"><a href="#photography">photography</a></li>
       </ul>
     </nav> <!-- .main-nav-hide / hidden menu -->
@@ -111,26 +111,36 @@
       </div>
     </div> <!-- .section .about-me  -->  
 
-    <div class="section user-interface flex">
+    <div class="section user-interface">
       <div class="p-background-icon">
-        <img src="img/prototype_icon.svg" alt=" prototype and design initial">
+        <img src="img/prototype_icon.svg" alt="prototype and design initial">
       </div>
-      <div class="ux-slide-01 flex justify-center is-row">
+      <div class="ui-container flex justify-center is-row">
         <div class="wrapper-container flex justify-center align-center is-row">
           <article>
-            <h3 class="fadetext-item">prototyping + design</h3>
-            <p class="quote-text fadetext-item">“Even the darkest moments in our history can get got”
+            <h3 class="fadetext-ui">prototyping + design</h3>
+            <p class="quote-text fadetext-ui">“Even the darkest moments in our history can get got”
             </p>
-            <p class="fadetext-item">Take a break for a moment One of the biggest <br>  challenges of design work is.</p>
-            <button class="btn fadetext-item">view case study</button>
+            <p class="fadetext-ui">Take a break for a moment One of the biggest <br>  challenges of design work is.</p>
+            <button class="btn fadetext-ui">view case study</button>
           </article>
         </div>
-      </div> <!-- .ux-slide-01 -->
-    </div> <!-- .section ux -->
+      </div>
+    </div> <!-- .section user-interface -->
 
-    <div class="section prototype">
-      <h1>prototype content</h1>
-    </div>  
+    <div class="section interaction">
+      <div class="interaction-container flex justify-center is-row">
+        <div class="wrapper-container flex justify-center align-center is-row">
+          <article>
+            <h3 class="fadetext-interaction">Interaction Design</h3>
+            <p class="quote-text fadetext-interaction">“Talk about how important micro-interactions are to UX design”
+            </p>
+            <p class="fadetext-interaction">Can talk about prototyping and adding/enhanceing use experience with microinteractions</p>
+            <button class="btn fadetext-interaction">view case study</button>
+          </article>
+        </div>
+      </div> 
+    </div> <!-- .section interaction --> 
    
     <div class="section photography">
       <div class="container">
