--- a/user-interface-main.html
+++ b/user-interface-main.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Welcome to Rayfinn digital</title>
+  <title>Rayfinn digital | User interface and prototyping</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -40,9 +40,9 @@
     <nav class="main-nav-hide">
       <div id="transition-container"></div>
       <ul id="myMenu">
-        <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
-        <li data-menuanchor="about-me"><a href="#about-me">about me</a></li>
-        <li data-menuanchor="user-interface"><a href="#user-interface">UX/UI</a></li>
+        <li data-menuanchor="home" class="active"><a href="../#home">home</a></li>
+        <li data-menuanchor="about-me"><a href="../#about-me">about me</a></li>
+        <li data-menuanchor="user-interface"><a href="../#user-interface">UX/UI</a></li>
         <li data-menuanchor="interaction"><a href="#interaction">interaction</a></li>
         <li data-menuanchor="photography"><a href="#photography">photography</a></li>
       </ul>
@@ -56,29 +56,6 @@
   </div> <!-- .main-header & navigation -->
 
   <main role="main" id="fullpage">
-
-    <div class="section main-landing-page">
-
-      <div class="container center-content" >
-        <div id="salmon-fish">
-          <img src="img/salmon-split.png">
-          <img id="salmon-fin" src="img/finn.png">
-        </div>       
-      </div>
-
-      <div class="pulse">
-        <a href="#about-me">
-          <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
-            <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
-            <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
-            <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
-            <circle cx="22" cy="22" r="8"></circle>
-            </g>
-          </svg>
-        </a>
-      </div>
-
-    </div> <!-- .main-landing-page -->
 
     <div class="section about-me flex align-center">
        <div class="wrapper-container flex align-center justify-center">
@@ -122,7 +99,7 @@
             <p class="quote-text fadetext-ui">“Even the darkest moments in our history can get got”
             </p>
             <p class="fadetext-ui">Take a break for a moment One of the biggest <br>  challenges of design work is.</p>
-            <a href="user-interface-main.html"><button class="btn fadetext-ui">view case study</button></a>
+            <button class="btn fadetext-ui">view case study</button>
           </article>
         </div>
       </div>
@@ -141,12 +118,6 @@
         </div>
       </div> 
     </div> <!-- .section interaction --> 
-   
-    <div class="section photography">
-      <div class="container">
-        <h1>photography content</h1>
-      </div>
-    </div> 
 
   </main> <!-- end of main section -->
 
