start working on page preload function

--- a/user-interface-main.html
+++ b/user-interface-main.html
@@ -20,6 +20,12 @@
   <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
+  <div class="spinner-wrapper">
+    <div class="spinner">
+      <div class="dot1"></div>
+      <div class="dot2"></div>
+    </div>
+  </div>
   
   <div class="main-header">
     <figure class="logo red-logo active-logo">
