--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
   <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
+
+  <!-- <div id="transition-container"></div> -->
   <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
   </div>
+
   <div class="main-header">
     <figure class="logo red-logo active-logo">
       <a href="#home"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
