--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     </div>
   </div>
 
+<!--   <div class="fisher-wrapper">
+      <div class="puff-fish"></div>
+  </div> -->
+
   <div class="main-header">
     <figure class="logo red-logo active-logo">
       <a href="#home"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
