finish javascript functionality for slide down nav

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <li data-menuanchor="about-me"><a href="#about-me">about me</a></li>
           <li data-menuanchor="user-interface"><a href="#user-interface">UX/UI</a></li>
           <li data-menuanchor="interaction"><a href="#interaction">interaction</a></li>
-          <li data-menuanchor="photography"><a href="#photography">design</a></li>
+          <li data-menuanchor="photography"><a href="#photography">photography</a></li>
         </ul>
       </div>
 
