add responsive full psge nav

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
       </div>
     </div> <!-- .navbar-toggle / hamburger menu -->
 
-  <nav class="fp-nav-wrapper flex is-row align-center justify-center">
+  <nav class="fp-nav-wrapper flex is-row justify-start">
 
     <div class="menu-container flex is-row">
 
       <div class="nav-content is-half">
         <ul class="menu-list-items">
           <li data-menuanchor="home" class="active"><a href="#home">rayfinn</a></li>
-          <li data-menuanchor="about-me"><a href="#about-me">about me</a></li>
+          <li data-menuanchor="about-me"><a href="#about-me">about</a></li>
           <li data-menuanchor="user-interface"><a href="#user-interface">UX/UI</a></li>
           <li data-menuanchor="interaction"><a href="#interaction">interaction</a></li>
           <li data-menuanchor="photography"><a href="#photography">photography</a></li>
@@ -66,7 +66,7 @@
       </div>
 
       <aside class="nav-content-text flex is-half justify-center">
-        <h2>Hello and welcome to my website. Im an interactive designer and front end developer based in Wellington.</h2>
+        <p>Hello and welcome to my website. Im an interactive designer and front end developer based in Wellington whah whah</p>
       </aside>
 
     </div>
