change ease in animations

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <h3 class="fadetext-ui">prototyping + design</h3>
             <p class="quote-text fadetext-ui">“Even the darkest moments in our history can get got”
             </p>
-            <p class="fadetext-ui">Take a break for a moment One of the biggest <br>  challenges of design work is.</p>
+            <p class="fadetext-ui">I believe prototyping and design are going to become more and more related in the future. Showing is always better than telling and high-fidelity prototypes with interactivity requires little description. And instant feedback</p>
             <a href="user-interface-main.html"><button class="btn fadetext-ui">view case study</button></a>
           </article>
         </div>
