--- a/user-interface-main.html
+++ b/user-interface-main.html
@@ -80,6 +80,9 @@
           </g>
         </svg>
         </div>
+        <div class="temp-image">
+          <img src="img/test-image.jpg" alt="">
+        </div>
         <h1>Wellington based digital designer and front end developer</h1>
         <ul class="skills space-between">
           <li class="skill-item">design</li>
