fixing nav bar for user-interface html

--- a/user-interface-main.html
+++ b/user-interface-main.html
@@ -44,8 +44,7 @@
     </div> <!-- .navbar-toggle / hamburger menu -->
 
     <nav class="main-nav-hide">
-      <div id="transition-container"></div>
-      <ul id="myMenu">
+      <ul class="menu-list-items">
         <li data-menuanchor="home" class="active"><a href="../#home">home</a></li>
         <li data-menuanchor="about-me"><a href="../#about-me">about me</a></li>
         <li data-menuanchor="user-interface"><a href="../#user-interface">UX/UI</a></li>
