continue working on sketch file for user interface

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </div> <!-- .section interaction --> 
    
     <div class="section photography">
-      <div class="container">
+      <div class="container center-content">
         <h1>photography content</h1>
       </div>
     </div> 
