fix naivation page on prototyping page

--- a/user-interface-main.html
+++ b/user-interface-main.html
@@ -28,6 +28,7 @@
   </div>
   
   <div class="main-header">
+
     <figure class="logo red-logo active-logo">
       <a href="#home"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
     </figure>
@@ -35,29 +36,43 @@
       <a href="#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
     </figure>
 
+
+
     <div class="navbar-toggle">
-      <div class="menu-container">
+      <div class="hamburger-container">
         <div class="menu-bar"></div>
         <div class="menu-bar"></div>
         <div class="menu-bar"></div>
       </div>
     </div> <!-- .navbar-toggle / hamburger menu -->
 
-    <nav class="main-nav-hide">
-      <ul class="menu-list-items">
-        <li data-menuanchor="home" class="active"><a href="../#home">home</a></li>
-        <li data-menuanchor="about-me"><a href="../#about-me">about me</a></li>
-        <li data-menuanchor="user-interface"><a href="../#user-interface">UX/UI</a></li>
-        <li data-menuanchor="interaction"><a href="#interaction">interaction</a></li>
-        <li data-menuanchor="photography"><a href="#photography">photography</a></li>
-      </ul>
-    </nav> <!-- .main-nav-hide / hidden menu -->
+  <nav class="fp-nav-wrapper flex is-row justify-start">
+
+    <div class="menu-container flex is-row">
+
+      <div class="nav-content is-half">
+        <ul class="menu-list-items">
+          <li data-menuanchor="home" class="active"><a href="#home">rayfinn</a></li>
+          <li data-menuanchor="about-me"><a href="#about-me">about</a></li>
+          <li data-menuanchor="user-interface"><a href="#user-interface">UX/UI</a></li>
+          <li data-menuanchor="interaction"><a href="#interaction">interaction</a></li>
+          <li data-menuanchor="photography"><a href="#photography">photography</a></li>
+        </ul>
+      </div>
+
+      <aside class="nav-content-text flex is-half justify-center">
+        <p>Hello and welcome to my website. Im an interactive designer and front end developer based in Wellington whah whah</p>
+      </aside>
+
+    </div>
+  </nav> <!-- .fp-nav-wrapper -->
 
     <div class="social-main">
       <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
       <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
       <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
     </div>
+    
   </div> <!-- .main-header & navigation -->
 
   <main role="main" id="fullpage">
