--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <ul class="menu-list-items">
           <li data-menuanchor="home" class="active"><a href="#home">rayfinn</a></li>
           <li data-menuanchor="about-me"><a href="#about-me">about</a></li>
-          <li data-menuanchor="user-interface"><a href="#user-interface">UX/UI</a></li>
+          <li data-menuanchor="prototype"><a href="#prototype">prototype</a></li>
           <li data-menuanchor="interaction"><a href="#interaction">interaction</a></li>
           <li data-menuanchor="photography"><a href="#photography">photography</a></li>
         </ul>
@@ -78,7 +78,7 @@
       <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
       <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
     </div>
-    
+
   </div> <!-- .main-header & navigation -->
 
   <main role="main" id="fullpage">
@@ -137,18 +137,18 @@
       </div>
     </div> <!-- .section .about-me  -->  
 
-    <div class="section user-interface">
+    <div class="section prototype">
       <div class="p-background-icon">
         <img src="img/prototype_icon.svg" alt="prototype and design initial">
       </div>
-      <div class="ui-container flex justify-center is-row">
+      <div class="prototype-container flex justify-center is-row">
         <div class="wrapper-container flex justify-center align-center is-row">
           <article>
-            <h3 class="fadetext-ui">prototyping + design</h3>
-            <p class="quote-text fadetext-ui">“Even the darkest moments in our history can get got”
+            <h3 class="fadetext-prototype">prototyping + design</h3>
+            <p class="quote-text fadetext-prototype">“Even the darkest moments in our history can get got”
             </p>
-            <p class="fadetext-ui">I believe prototyping and design are going to become more and more related in the future. Showing is always better than telling and high-fidelity prototypes with interactivity requires little description. And instant feedback</p>
-            <a href="user-interface-main.html"><button class="btn fadetext-ui">view case study</button></a>
+            <p class="fadetext-prototype">I believe prototyping and design are going to become more and more related in the future. Showing is always better than telling and high-fidelity prototypes with interactivity requires little description. And instant feedback</p>
+            <a href="user-interface-main.html"><button class="btn fadetext-prototype">view case study</button></a>
           </article>
         </div>
       </div>
