--- a/index.html
+++ b/index.html
@@ -29,10 +29,6 @@
     </div>
   </div>
 
-<!--   <div class="fisher-wrapper">
-      <div class="puff-fish"></div>
-  </div> -->
-
   <div class="main-header">
 
     <figure class="logo red-logo active-logo">
@@ -148,7 +144,7 @@
             <p class="quote-text fadetext-prototype">“Even the darkest moments in our history can get got”
             </p>
             <p class="fadetext-prototype">I believe prototyping and design are going to become more and more related in the future. Showing is always better than telling and high-fidelity prototypes with interactivity requires little description. And instant feedback</p>
-            <a href="user-interface-main.html"><button class="btn fadetext-prototype">view case study</button></a>
+            <a href="prototype.html"><button class="btn fadetext-prototype">view case study</button></a>
           </article>
         </div>
       </div>
