--- a/prototype.html
+++ b/prototype.html
@@ -6,12 +6,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Rayfinn digital | User interface and prototyping</title>
+  <title>Welcome to Rayfinn digital</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/minireset.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -21,13 +20,15 @@
   <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
-  <div class="spinner-wrapper">
+
+  <!-- <div id="transition-container"></div> -->
+<!--   <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
-  </div>
-  
+  </div> -->
+
   <div class="main-header">
 
     <figure class="logo red-logo active-logo">
@@ -36,7 +37,6 @@
     <figure class="logo white-logo">
       <a href="#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
     </figure>
-
 
 
     <div class="navbar-toggle">
@@ -53,11 +53,11 @@
 
       <div class="nav-content is-half">
         <ul class="menu-list-items">
-          <li data-menuanchor="home" class="active"><a href="#home">rayfinn</a></li>
-          <li data-menuanchor="about-me"><a href="#about-me">about</a></li>
-          <li data-menuanchor="user-interface"><a href="#user-interface">UX/UI</a></li>
-          <li data-menuanchor="interaction"><a href="#interaction">interaction</a></li>
-          <li data-menuanchor="photography"><a href="#photography">photography</a></li>
+          <li data-menuanchor="home" class="active"><a href="./#home">rayfinn</a></li>
+          <li data-menuanchor="about-me"><a href="./#about-me">about</a></li>
+          <li data-menuanchor="prototype"><a href="./#prototype">prototype</a></li>
+          <li data-menuanchor="interaction"><a href="./#interaction">interaction</a></li>
+          <li data-menuanchor="photography"><a href="./#photography">photography</a></li>
         </ul>
       </div>
 
@@ -67,81 +67,50 @@
 
     </div>
   </nav> <!-- .fp-nav-wrapper -->
+ </div> <!-- .main-header & navigation -->
 
-    <div class="social-main">
-      <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-      <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
-      <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-    </div>
-    
-  </div> <!-- .main-header & navigation -->
-
-  <main role="main" id="fullpage">
-
-    <div class="section about-me flex align-center">
-       <div class="wrapper-container flex align-center justify-center">
-        <div class="rayfinn-logo-wrapper">
-          <svg version="1.1" id="rayfinn-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 300 61" style="enable-background:new 0 0 300 61;" xml:space="preserve">
-          <g>
-            <path class="st0" d="M30.6,55.3L19,39.1h-0.1v16.3H6.6V5h15.9C27.8,5,33.6,5.1,38,8.6c4.1,3.3,6.2,8.5,6.2,13.7
-              c0,7.8-4.6,14.6-12.5,15.8l13.7,17.1H30.6z M23.6,16.3h-4.7v14h4.6c4.8,0,8.4-2,8.4-7.2C31.8,18.1,28,16.3,23.6,16.3z"/>
-            <path class="st0" d="M83.4,55.3L80.9,48H63.5l-2.7,7.3H47L67.2,5h10.1l20,50.3H83.4z M72.4,20.6L72.4,20.6h-0.2L67,37.8h10.5
-              L72.4,20.6z"/>
-            <path class="st0" d="M121,37v18.3h-12.9V37l-15-32h13.9l7.5,20.2L122.1,5h13.8L121,37z"/>
-            <path class="st0" d="M153.4,16.3v8.6H168v11.3h-14.6v19.2h-12.3V5h27.5v11.3H153.4z"/>
-            <path class="st0" d="M175.5,55.3V5h12.9v50.3H175.5z"/>
-            <path class="st0" d="M228.7,55.3l-19.2-30.6l-0.1,0.1l0.3,30.5h-12.3V5h11.1L228,36.6l0.1-0.1L227.6,5h12.3v50.3H228.7z"/>
-            <path class="st0" d="M280.3,55.3l-19.2-30.6l-0.1,0.1l0.3,30.5H249V5h11.1l19.4,31.6l0.1-0.1L279.2,5h12.3v50.3H280.3z"/>
-          </g>
-        </svg>
-        </div>
-        <div class="temp-image">
-          <img src="img/test-image.jpg" alt="">
-        </div>
-        <h1>Wellington based digital designer and front end developer</h1>
-        <ul class="skills space-between">
-          <li class="skill-item">design</li>
-          <li class="skill-item">prototyping</li>
-          <li class="skill-item">UX/UI</li>
-          <li class="skills-item">Interactive</li>
-        </ul> 
-        <div class="about-footer-text">
-          <h4>click above to view my portfolio</h4>
-        </div>
-      </div>     
-      </div>
-    </div> <!-- .section .about-me  -->  
-
-    <div class="section user-interface">
-      <div class="p-background-icon">
-        <img src="img/prototype_icon.svg" alt="prototype and design initial">
-      </div>
-      <div class="ui-container flex justify-center is-row">
-        <div class="wrapper-container flex justify-center align-center is-row">
-          <article>
-            <h3 class="fadetext-ui">prototyping + design</h3>
-            <p class="quote-text fadetext-ui">“Even the darkest moments in our history can get got”
-            </p>
-            <p class="fadetext-ui">Take a break for a moment One of the biggest <br>  challenges of design work is.</p>
-            <button class="btn fadetext-ui">view case study</button>
-          </article>
-        </div>
-      </div>
-    </div> <!-- .section user-interface -->
-
-    <div class="section interaction">
-      <div class="interaction-container flex justify-center is-row">
-        <div class="wrapper-container flex justify-center align-center is-row">
-          <article>
-            <h3 class="fadetext-interaction">Interaction Design</h3>
-            <p class="quote-text fadetext-interaction">“Talk about how important micro-interactions are to UX design”
-            </p>
-            <p class="fadetext-interaction">Can talk about prototyping and adding/enhanceing use experience with microinteractions</p>
-            <button class="btn fadetext-interaction">view case study</button>
-          </article>
+  <main>
+  <div class="prototype-intro-wrapper flex align-center justify-center">
+    <div class="section-container">
+      <div class="prototype-case-study flex is-row align-center justify-center">
+        <div class="intro-text is-two-thirds">
+          <h1>Bird Nerd</h1>
+          <p><span>Y / </span>2016</p>
+          <p><span>TYPE / </span>Personal Project + Proof of concept</p>
+          <p><span>SERVICES / </span>UX/UI + PROTOTYPE</p>
+          <p class="prototype-body-text">
+            Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small team. The small team need some concepts and prototypes to pitch. 
+          </p>
+        </div>  
+        <div class="welcome-iphone is-third">
+          <img src="img/welcome-iphone.png" alt="welcome page of Bird Nerd app">
         </div>
       </div> 
+    </div>
+  </div> <!-- .prototype-intro-wrapper -->
+
+    <div class="prototype-process">
+       
+      <h1>Welcome2</h1>
+
+
+
+    </div> <!-- .section .about-me  -->  
+
+    <div class="">
+      <h1>Welcome3</h1>
+
+    </div> <!-- .section user-interface -->
+
+    <div class="">
+      <h1>Welcome4</h1>
+
     </div> <!-- .section interaction --> 
+   
+    <div class="">
+      <h1>Welcome5</h1>
+
+    </div> 
 
   </main> <!-- end of main section -->
 
