continue working on case-study section

--- a/prototype.html
+++ b/prototype.html
@@ -70,7 +70,7 @@
  </div> <!-- .main-header & navigation -->
 
   <main>
-  <div class="prototype-intro-wrapper flex align-center justify-center">
+  <div class="prototype-intro-wrapper fullpage-section flex align-center justify-center">
     <div class="section-container">
       <div class="prototype-case-study flex is-row align-center justify-center">
         <div class="intro-text is-two-thirds">
@@ -89,9 +89,33 @@
     </div>
   </div> <!-- .prototype-intro-wrapper -->
 
-    <div class="prototype-process">
-       
-      <h1>Welcome2</h1>
+  <div class="prototype-process fullpage-section flex align-center">
+    
+    <div class="section-container">
+      <div class="process-text">
+        <h1>Process</h1>
+        <h4>scoping</h4>
+        <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. Bird Nerd also allows users to tag and share their location and add birds to their personal collection. The app would generally be targeted towards bird enthusiast but also needed to appeal other target groups. The team at MPI needed a prototype to present to.</p>
+      </div>
+      <div class="client-sketches flex is-row">
+        <div>
+          <img src="img/assets/bird-nerd-1.jpg" alt="fill this out">
+        </div>
+        <div>
+          <img src="img/assets/bird-nerd-2.jpg" alt="fill this out">
+        </div>
+        <div>
+          <img src="img/assets/bird-nerd-3.jpg" alt="fill this out">
+        </div>
+        <div>
+          <img src="img/assets/bird-nerd-4.jpg" alt="fill this out">
+        </div>
+        <div>
+          <img src="img/assets/bird-nerd-5.jpg" alt="fill this out">
+        </div>>
+      </div> 
+    </div>  
+  </div>  
 
 
 
