change max-width on prototype page

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <div class="section about-me flex align-center">
        <div class="wrapper-container flex align-center justify-center">
-        <div class="rayfinn-logo-wrapper">
+<!--         <div class="rayfinn-logo-wrapper">
           <svg version="1.1" id="rayfinn-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 300 61" style="enable-background:new 0 0 300 61;" xml:space="preserve">
           <g>
             <path class="st0" d="M30.6,55.3L19,39.1h-0.1v16.3H6.6V5h15.9C27.8,5,33.6,5.1,38,8.6c4.1,3.3,6.2,8.5,6.2,13.7
@@ -118,7 +118,7 @@
             <path class="st0" d="M280.3,55.3l-19.2-30.6l-0.1,0.1l0.3,30.5H249V5h11.1l19.4,31.6l0.1-0.1L279.2,5h12.3v50.3H280.3z"/>
           </g>
         </svg>
-        </div>
+        </div> -->
         <h1>Wellington based digital designer and front end developer</h1>
         <ul class="skills space-between">
           <li class="skill-item">design</li>
