--- a/prototype.html
+++ b/prototype.html
@@ -22,20 +22,20 @@
       <![endif]-->
 
   <!-- <div id="transition-container"></div> -->
-<!--   <div class="spinner-wrapper">
+  <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
-  </div> -->
+  </div>
 
   <div class="main-header">
 
     <figure class="logo red-logo active-logo">
-      <a href="#home"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
+      <a href="./#home"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
     </figure>
     <figure class="logo white-logo">
-      <a href="#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
+      <a href="./#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
     </figure>
 
 
