continue working on prototpe page

--- a/prototype.html
+++ b/prototype.html
@@ -22,12 +22,12 @@
       <![endif]-->
 
   <!-- <div id="transition-container"></div> -->
-  <div class="spinner-wrapper">
+<!--   <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
-  </div>
+  </div> -->
 
   <div class="main-header">
 
@@ -69,11 +69,11 @@
   </nav> <!-- .fp-nav-wrapper -->
  </div> <!-- .main-header & navigation -->
 
-  <main>
-  <div class="prototype-intro-wrapper fullpage-section flex align-center justify-center">
+  <main class="main-wrapper">
+  <section class="prototype-intro-wrapper fullpage-section flex align-center justify-center">
     <div class="section-container">
-      <div class="prototype-case-study flex is-row align-center justify-center">
-        <div class="intro-text is-two-thirds">
+      <div class="prototype-case-study flex is-row align-center space-between">
+        <article class="intro-text is-two-thirds">
           <h1>Bird Nerd</h1>
           <p><span>Y / </span>2016</p>
           <p><span>TYPE / </span>Personal Project + Proof of concept</p>
@@ -81,23 +81,23 @@
           <p class="prototype-body-text">
             Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small team. The small team need some concepts and prototypes to pitch. 
           </p>
-        </div>  
-        <div class="welcome-iphone is-third">
+        </article>  
+        <div class="welcome-iphone">
           <img src="img/welcome-iphone.png" alt="welcome page of Bird Nerd app">
         </div>
       </div> 
     </div>
-  </div> <!-- .prototype-intro-wrapper -->
+  </section> <!-- .prototype-intro-wrapper -->
 
-  <div class="prototype-process fullpage-section flex align-center">
+  <section class="prototype-process fullpage-section flex align-center">
     
     <div class="section-container">
-      <div class="process-text">
+      <article class="process-text">
         <h1>Process</h1>
         <h4>scoping</h4>
         <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. Bird Nerd also allows users to tag and share their location and add birds to their personal collection. The app would generally be targeted towards bird enthusiast but also needed to appeal other target groups. The team at MPI needed a prototype to present to.</p>
-      </div>
-      <div class="client-sketches flex is-row">
+      </article>
+      <article class="client-sketches flex is-row">
         <div>
           <img src="img/assets/bird-nerd-1.jpg" alt="fill this out">
         </div>
@@ -113,9 +113,9 @@
         <div>
           <img src="img/assets/bird-nerd-5.jpg" alt="fill this out">
         </div>>
-      </div> 
+      </article> 
     </div>  
-  </div>  
+  </section>  
 
 
 
@@ -136,7 +136,7 @@
 
     </div> 
 
-  </main> <!-- end of main section -->
+  </main> <!-- end of main-wrapper -->
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
