add content to mockup section

--- a/prototype.html
+++ b/prototype.html
@@ -154,30 +154,36 @@
           </div>
         </article>
       </div>
+    </div> <!-- .secction-container -->
 
-
-      </div> <!-- .secction-container -->
+    <div class="mockups flex align-center">
+      <div class="mockups-wrapper section-container">
+        <article>
+          <h2>MOCKUPS</h2>
+          <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements.</p>
+        </article>
+        <div class="interations flex is-row align-center">
+          <article class="interation-text is-third">
+            <h5>Iteration and experimentation</h5>
+            <p>Utilising Sketch’s artboard feature, I was able to quickly iterate and experiment with many different design variations.</p>
+          </article>
+          <aside class="is-two-thirds">
+            <img src="img/assets/interation-concepts.png" alt="screen shots of design concepts">
+          </aside>
+        </div>
+      </div>    
+    </div>
      
+    <div class="final-prototype flex align-center">
+      <div class="mockups-wrapper section-container">
+        <article>
+          <h2>MOCKUPS</h2>
+          <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements.</p>
+        </article>
+      </div>    
+    </div>
+
   </section>  <!-- .prototype-process -->
-
-
-
-    </div> <!-- .section .about-me  -->  
-
-    <div class="">
-      <h1>Welcome3</h1>
-
-    </div> <!-- .section user-interface -->
-
-    <div class="">
-      <h1>Welcome4</h1>
-
-    </div> <!-- .section interaction --> 
-   
-    <div class="">
-      <h1>Welcome5</h1>
-
-    </div> 
 
   </main> <!-- end of main-wrapper -->
 
