add mockup content

--- a/prototype.html
+++ b/prototype.html
@@ -158,17 +158,15 @@
 
     <div class="mockups flex align-center">
       <div class="mockups-wrapper section-container">
-        <article>
-          <h2>MOCKUPS</h2>
-          <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements.</p>
-        </article>
         <div class="interations flex is-row align-center">
-          <article class="interation-text is-third">
+          <article class="interation-text is-half">
+            <h2>MOCKUPS</h2>
+            <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements.</p>
             <h5>Iteration and experimentation</h5>
             <p>Utilising Sketch’s artboard feature, I was able to quickly iterate and experiment with many different design variations.</p>
           </article>
-          <aside class="is-two-thirds">
-            <img src="img/assets/interation-concepts.png" alt="screen shots of design concepts">
+          <aside class="is-half">
+            <img src="img/assets/interation-concepts.jpg" alt="screen shots of design concepts">
           </aside>
         </div>
       </div>    
