--- a/prototype.html
+++ b/prototype.html
@@ -157,7 +157,7 @@
     </div> <!-- .secction-container -->
 
     <div class="mockups flex align-center">
-      <div class="mockups-wrapper section-container">
+      <div class="section-container">
         <div class="interations flex is-row align-center">
           <article class="interation-text is-half">
             <h2>MOCKUPS</h2>
@@ -173,10 +173,24 @@
     </div>
      
     <div class="final-prototype flex align-center">
-      <div class="mockups-wrapper section-container">
+      <div class="section-container">
         <article>
-          <h2>MOCKUPS</h2>
-          <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements.</p>
+          <h2>Final Mockup</h2>
+          <p>Talk about why you choose a single color rather or why you went for that design. Another thing to think about is location. Talk about where that app is being used. If someone is in a forest surrounded by green, what would be a color that would stand out or compliment it? Secondly should the background change to say an image of a forest when the use returns to there home? </p>
+        </article>
+        <article class="final-prototype-screens flex is-row space-between">
+          <div>
+            <img src="img/loading-iphone.png" alt="fill this out">
+          </div>
+          <div>
+            <img src="img/welcome-iphone.png" alt="fill this out">
+          </div>
+          <div>
+            <img src="img/signin-iphone.png" alt="fill this out">
+          </div>
+          <div>
+            <img src="img/signup-iphone.png" alt="fill this out">
+          </div>
         </article>
       </div>    
     </div>
