refactor design and layout

--- a/prototype.html
+++ b/prototype.html
@@ -78,6 +78,7 @@
           <p><span>Y / </span>2016</p>
           <p><span>TYPE / </span>Personal Project + Proof of concept</p>
           <p><span>SERVICES / </span>UX/UI + PROTOTYPE</p>
+          <div class="rect-line"></div>
           <p class="prototype-body-text">
             Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small team. The small team need some concepts and prototypes to pitch. 
           </p>
@@ -91,11 +92,10 @@
 
   <section class="prototype-process flex align-center">
     <div class="section-container">
-      <div class="scoping">
-
-        <article class="process-text">
-          <h1>Process</h1>
-          <h3>scoping</h3>
+      <h1>Process</h1>
+      <div class="scope">
+        <article class="scope-text">
+          <h2>Scoping</h2>
           <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. Bird Nerd also allows users to tag and share their location and add birds to their personal collection. The app would generally be targeted towards bird enthusiast but also needed to appeal other target groups. The team at MPI needed a prototype to present to.</p>
         </article>
 
@@ -117,13 +117,13 @@
           </div>
         </article>
 
-        <h5>Early sketches provided by team at MPI</h5> 
+        <h5>(Early sketches provided by team at MPI)</h5> 
+      </div>
 
-      </div> <!-- .scoping -->
         
-      <div class="my-sketches flex is-row">
+      <div class="wireframes flex is-row">
         <article class="is-half">
-          <h1>Wireframing</h1>
+          <h2>Wireframing</h2>
           <p>For this case study I choose to develop one user story, On-boarding</p>
           <h2>pen and paper</h2>
           <p>Based on the sketches I received from the stakeholders, I spent approx an hour producing my own wireframes.</p>
