--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@
   </div> <!-- .main-header & navigation -->
 
   <main role="main" id="fullpage">
-
     <div class="section main-landing-page">
-
       <div class="container center-content" >
         <div id="salmon-fish">
           <img src="img/salmon-split.png">
@@ -181,6 +179,7 @@
 <!-- -->  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.3.1/vivus.min.js"></script>
   <!-- <script src="data/data.js"></script> -->
+  <script src="js/vendor/granim.min.js"></script>
   <script src="js/vendor/bodymovin.js"></script>
   <script src="js/main.js"></script>
 
