refine layout / prototype page

--- a/prototype.html
+++ b/prototype.html
@@ -117,29 +117,32 @@
           </div>
         </article>
 
-        <h5>(Early sketches provided by team at MPI)</h5> 
+        <h6>(Early sketches provided by team at MPI)</h6> 
       </div>
 
-        
-      <div class="wireframes flex is-row">
-        <article class="is-half">
+      <div class="wireframes">
+        <article class="wireframes-text">
           <h2>Wireframing</h2>
-          <p>For this case study I choose to develop one user story, On-boarding</p>
-          <h2>pen and paper</h2>
-          <p>Based on the sketches I received from the stakeholders, I spent approx an hour producing my own wireframes.</p>
+          <p>For this case study I choose to develop one user story, On-boarding. A website wireframe, also known as a page schematic or screen blueprint, is a visual guide that represents the skeletal framework of a website. :166. Wireframes are created for the purpose of arranging elements to best accomplish a particular purpose.</p>
         </article>
+      </div>
 
-        <aside class="is-half">
-          <img src="img/my-sketches.jpg" alt="">
-        </aside>
-      </div> 
+      <div class="pen-paper-sketches">
+          <article>
+            <h3>Pen and paper</h3>
+            <p>Based on the sketches I received from the stakeholders, I spent approx an hour producing my own wireframes. Below show my initial sketches</p>
+          </article>
+          <div>
+            <img src="img/wireframe-sketches.jpg" alt="fill this out">
+          </div>
+      </div>  
 
       <div class="sketch-wireframes">
         <article>
-          <h2>Sketch app</h2>
+          <h3>Using Sketch app to produce higher fidelity</h3>
           <p>Once I got a general idea of what elements were needed for this prototype, I then moved the wireframing into SKETCH for more precise wireframing to help communicate more complex interactions and flows. Sketch UI kits allowed me quickly produce vector based wireframe which I could then easily share and receive feedback.</p>
         </article>
-        <article class="wireframe-sketches flex is-row space-between">
+        <article class="flex is-row space-between">
           <div>
             <img src="img/assets/wireframe/landing.png" alt="fill this out">
           </div>
@@ -153,6 +156,7 @@
             <img src="img/assets/wireframe/signup.png" alt="fill this out">
           </div>
         </article>
+        <h6>(Wireframes done with sketch app)</h6> 
       </div>
     </div> <!-- .secction-container -->
 
