changes to prototype

--- a/prototype.html
+++ b/prototype.html
@@ -92,7 +92,10 @@
 
   <section class="prototype-process flex align-center">
     <div class="section-container">
-      <h1>Process</h1>
+      <div class="process">
+        <h1>Process</h1>
+        <p>We talk to your team and consumers, research competitors and learn everything about the market. We then take your brand's unique position in the market and craft a story around it to enable awesome design.</p>
+      </div>
       <div class="scope">
         <article class="scope-text">
           <h2>Scoping</h2>
