--- a/prototype.html
+++ b/prototype.html
@@ -69,7 +69,8 @@
   </nav> <!-- .fp-nav-wrapper -->
  </div> <!-- .main-header & navigation -->
 
-  <main class="main-wrapper">
+  <main class="prototype-main-wrapper">
+
   <section class="prototype-intro-wrapper fullpage-section flex align-center justify-center">
     <div class="section-container">
       <div class="prototype-case-study flex is-row align-center space-between">
@@ -84,125 +85,160 @@
           </p>
         </article>  
         <div class="welcome-iphone">
-          <img src="img/welcome-iphone.png" alt="welcome page of Bird Nerd app">
+          <img src="img/loading-iphone.png" alt="welcome page of Bird Nerd app">
         </div>
       </div> 
     </div>
   </section> <!-- .prototype-intro-wrapper -->
 
-  <section class="prototype-process flex align-center">
-    <div class="section-container">
-      <div class="process">
+  <section class="process flex align-center">
+    <div class="process-container section-container flex is-row space-between align-center">
+      <article class="process-text is-half">
         <h1>Process</h1>
         <p>We talk to your team and consumers, research competitors and learn everything about the market. We then take your brand's unique position in the market and craft a story around it to enable awesome design.</p>
-      </div>
-      <div class="scope">
-        <article class="scope-text">
-          <h2>Scoping</h2>
-          <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. Bird Nerd also allows users to tag and share their location and add birds to their personal collection. The app would generally be targeted towards bird enthusiast but also needed to appeal other target groups. The team at MPI needed a prototype to present to.</p>
-        </article>
+      </article>
+    </div>
+  </section> <!-- .process -->
 
-        <article class="client-sketches flex is-row">
-          <div>
-            <img src="img/assets/bird-nerd-1.jpg" alt="fill this out">
-          </div>
-          <div>
-            <img src="img/assets/bird-nerd-2.jpg" alt="fill this out">
-          </div>
-          <div>
-            <img src="img/assets/bird-nerd-3.jpg" alt="fill this out">
-          </div>
-          <div>
-            <img src="img/assets/bird-nerd-4.jpg" alt="fill this out">
-          </div>
-          <div>
-            <img src="img/assets/bird-nerd-5.jpg" alt="fill this out">
-          </div>
-        </article>
-
-        <h6>(Early sketches provided by team at MPI)</h6> 
-      </div>
-
-      <div class="wireframes">
-        <article class="wireframes-text">
-          <h2>Wireframing</h2>
-          <p>For this case study I choose to develop one user story, On-boarding. A website wireframe, also known as a page schematic or screen blueprint, is a visual guide that represents the skeletal framework of a website. :166. Wireframes are created for the purpose of arranging elements to best accomplish a particular purpose.</p>
-        </article>
-      </div>
-
-      <div class="pen-paper-sketches">
-          <article>
-            <h3>Pen and paper</h3>
-            <p>Based on the sketches I received from the stakeholders, I spent approx an hour producing my own wireframes. Below show my initial sketches</p>
-          </article>
-          <div>
-            <img src="img/wireframe-sketches.jpg" alt="fill this out">
-          </div>
-      </div>  
-
-      <div class="sketch-wireframes">
-        <article>
-          <h3>Using Sketch app to produce higher fidelity</h3>
-          <p>Once I got a general idea of what elements were needed for this prototype, I then moved the wireframing into SKETCH for more precise wireframing to help communicate more complex interactions and flows. Sketch UI kits allowed me quickly produce vector based wireframe which I could then easily share and receive feedback.</p>
-        </article>
-        <article class="flex is-row space-between">
-          <div>
-            <img src="img/assets/wireframe/landing.png" alt="fill this out">
-          </div>
-          <div>
-            <img src="img/assets/wireframe/welcome.png" alt="fill this out">
-          </div>
-          <div>
-            <img src="img/assets/wireframe/signin.png" alt="fill this out">
-          </div>
-          <div>
-            <img src="img/assets/wireframe/signup.png" alt="fill this out">
-          </div>
-        </article>
-        <h6>(Wireframes done with sketch app)</h6> 
-      </div>
-    </div> <!-- .secction-container -->
-
-    <div class="mockups flex align-center">
-      <div class="section-container">
-        <div class="interations flex is-row align-center">
-          <article class="interation-text is-half">
-            <h2>MOCKUPS</h2>
-            <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements.</p>
-            <h5>Iteration and experimentation</h5>
-            <p>Utilising Sketch’s artboard feature, I was able to quickly iterate and experiment with many different design variations.</p>
-          </article>
-          <aside class="is-half">
-            <img src="img/assets/interation-concepts.jpg" alt="screen shots of design concepts">
-          </aside>
+  <section class="scope flex align-center">
+    <div class="scope-container section-container">
+      <article class="scope-text">
+        <h2>Scoping</h2>
+        <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. Bird Nerd also allows users to tag and share their location and add birds to their personal collection. The app would generally be targeted towards bird enthusiast but also needed to appeal other target groups. The team at MPI needed a prototype to present to.</p>
+      </article>
+      <article class="client-sketches flex is-row">
+        <div>
+          <img src="img/assets/bird-nerd-1.jpg" alt="fill this out">
         </div>
-      </div>    
+        <div>
+          <img src="img/assets/bird-nerd-2.jpg" alt="fill this out">
+        </div>
+        <div>
+          <img src="img/assets/bird-nerd-3.jpg" alt="fill this out">
+        </div>
+        <div>
+          <img src="img/assets/bird-nerd-4.jpg" alt="fill this out">
+        </div>
+        <div>
+          <img src="img/assets/bird-nerd-5.jpg" alt="fill this out">
+        </div>
+    </article>
+        <h6>(Early sketches provided by team at MPI)</h6> 
     </div>
-     
-    <div class="final-prototype flex align-center">
-      <div class="section-container">
-        <article>
-          <h2>Final Mockup</h2>
-          <p>Talk about why you choose a single color rather or why you went for that design. Another thing to think about is location. Talk about where that app is being used. If someone is in a forest surrounded by green, what would be a color that would stand out or compliment it? Secondly should the background change to say an image of a forest when the use returns to there home? </p>
-        </article>
-        <article class="final-prototype-screens flex is-row space-between">
-          <div>
-            <img src="img/loading-iphone.png" alt="fill this out">
-          </div>
-          <div>
-            <img src="img/welcome-iphone.png" alt="fill this out">
-          </div>
-          <div>
-            <img src="img/signin-iphone.png" alt="fill this out">
-          </div>
-          <div>
-            <img src="img/signup-iphone.png" alt="fill this out">
-          </div>
-        </article>
-      </div>    
-    </div>
+  </section> <!-- .scope -->
 
-  </section>  <!-- .prototype-process -->
+
+
+
+    <section class="prototype-process flex align-center">
+      <div class="section-container">
+
+        <div class="scope">
+          <article class="scope-text">
+            <h2>Scoping</h2>
+            <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. Bird Nerd also allows users to tag and share their location and add birds to their personal collection. The app would generally be targeted towards bird enthusiast but also needed to appeal other target groups. The team at MPI needed a prototype to present to.</p>
+          </article>
+
+          <article class="client-sketches flex is-row">
+            <div>
+              <img src="img/assets/bird-nerd-1.jpg" alt="fill this out">
+            </div>
+            <div>
+              <img src="img/assets/bird-nerd-2.jpg" alt="fill this out">
+            </div>
+            <div>
+              <img src="img/assets/bird-nerd-3.jpg" alt="fill this out">
+            </div>
+            <div>
+              <img src="img/assets/bird-nerd-4.jpg" alt="fill this out">
+            </div>
+            <div>
+              <img src="img/assets/bird-nerd-5.jpg" alt="fill this out">
+            </div>
+          </article>
+          <h6>(Early sketches provided by team at MPI)</h6> 
+        </div>
+
+        <div class="wireframes">
+          <article class="wireframes-text">
+            <h2>Wireframing</h2>
+            <p>For this case study I choose to develop one user story, On-boarding. A website wireframe, also known as a page schematic or screen blueprint, is a visual guide that represents the skeletal framework of a website. :166. Wireframes are created for the purpose of arranging elements to best accomplish a particular purpose.</p>
+          </article>
+        </div>
+
+        <div class="pen-paper-sketches">
+            <article>
+              <h3>Pen and paper</h3>
+              <p>Based on the sketches I received from the stakeholders, I spent approx an hour producing my own wireframes. Below show my initial sketches</p>
+            </article>
+            <div>
+              <img src="img/wireframe-sketches.jpg" alt="fill this out">
+            </div>
+        </div>  
+
+        <div class="sketch-wireframes">
+          <article>
+            <h3>Using Sketch app to produce higher fidelity</h3>
+            <p>Once I got a general idea of what elements were needed for this prototype, I then moved the wireframing into SKETCH for more precise wireframing to help communicate more complex interactions and flows. Sketch UI kits allowed me quickly produce vector based wireframe which I could then easily share and receive feedback.</p>
+          </article>
+          <article class="flex is-row space-between">
+            <div>
+              <img src="img/assets/wireframe/landing.png" alt="fill this out">
+            </div>
+            <div>
+              <img src="img/assets/wireframe/welcome.png" alt="fill this out">
+            </div>
+            <div>
+              <img src="img/assets/wireframe/signin.png" alt="fill this out">
+            </div>
+            <div>
+              <img src="img/assets/wireframe/signup.png" alt="fill this out">
+            </div>
+          </article>
+          <h6>(Wireframes done with sketch app)</h6> 
+        </div>
+      </div> <!-- .secction-container -->
+
+      <div class="mockups flex align-center">
+        <div class="section-container">
+          <div class="interations flex is-row align-center">
+            <article class="interation-text is-half">
+              <h2>MOCKUPS</h2>
+              <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements.</p>
+              <h5>Iteration and experimentation</h5>
+              <p>Utilising Sketch’s artboard feature, I was able to quickly iterate and experiment with many different design variations.</p>
+            </article>
+            <aside class="is-half">
+              <img src="img/assets/interation-concepts.jpg" alt="screen shots of design concepts">
+            </aside>
+          </div>
+        </div>    
+      </div>
+       
+      <div class="final-prototype flex align-center">
+        <div class="section-container">
+          <article>
+            <h2>Final Mockup</h2>
+            <p>Talk about why you choose a single color rather or why you went for that design. Another thing to think about is location. Talk about where that app is being used. If someone is in a forest surrounded by green, what would be a color that would stand out or compliment it? Secondly should the background change to say an image of a forest when the use returns to there home? </p>
+          </article>
+          <article class="final-prototype-screens flex is-row space-between">
+            <div>
+              <img src="img/loading-iphone.png" alt="fill this out">
+            </div>
+            <div>
+              <img src="img/welcome-iphone.png" alt="fill this out">
+            </div>
+            <div>
+              <img src="img/signin-iphone.png" alt="fill this out">
+            </div>
+            <div>
+              <img src="img/signup-iphone.png" alt="fill this out">
+            </div>
+          </article>
+        </div>    
+      </div>
+
+    </section>  <!-- .prototype-process -->
 
   </main> <!-- end of main-wrapper -->
 
